// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Element adds the focusBlue modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #1FB6FF;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusDanger modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #FF4949;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusDefault modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #AFAFAF;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusGreen modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #13CE66;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusInfo modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #1FB6FF;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusOrange modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #FF7849;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusPink modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #FF49DB;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusPrimmary modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusPurple modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #7E5BEF;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusSecondary modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottomm-color: #FFC82C;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusSuccess modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #13CE66;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusTertiary modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottomm-color: #FF49DB;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusWarning modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #FFC82C;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element adds the focusYellow modifier 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

.c0:focus {
  border-bottom-color: #FFC82C;
}

<textarea
  className="c0"
/>
`;

exports[`TextArea Element renders correctly 1`] = `
.c0 {
  background: none;
  border: none;
  border-bottom: 2px solid #FAFAFA;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 1rem;
  outline: none;
  resize: vertical;
  -webkit-transition: border-bottom 200ms ease;
  transition: border-bottom 200ms ease;
}

.c0:focus {
  border-bottom-color: #7D7D7D;
}

<textarea
  className="c0"
/>
`;
